--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.text {
+  color: white;
+  font-family: "Lato", sans-serif;
+  text-transform: capitalize;
+  font-size: 20px;
+  margin: 0;
+}
+.task {
+  border-radius: 0.5em;
+  display: flex;
+  align-items: center;
+  padding: 1em;
+  margin-bottom: 1em;
+}
+h1 {
+  font-weight: bolder;
+}
+.btn {
+  font-family: "Lato", sans-serif;
+  margin-left: auto !important;
+  align-self: center;
+  justify-self: left;
 }
